argocd/image-updater.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
  namespace: argocd
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-image-updater
    app.kubernetes.io/part-of: argocd-image-updater
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-image-updater
    spec:
      serviceAccountName: argocd-image-updater-sa
      containers:
        - name: argocd-image-updater
          image: quay.io/argoprojlabs/argocd-image-updater:v0.17.0
          imagePullPolicy: Always
          args: ["run","--interval=30s"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /app/config
              name: image-updater-conf
            - mountPath: /tmp
              name: tmp
            - mountPath: "/mnt/secrets-store"
              name: secrets-store-inline
              readOnly: true
      volumes:
        - name: image-updater-conf
          configMap:
            name: argocd-image-updater-config
        - name: tmp
          emptyDir: {}
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: env-secret-csi
